--- a/src/assets/css/landing.scss
+++ b/src/assets/css/landing.scss
@@ -76,9 +76,9 @@
 }
 
 .bg-image{
-    background: url('../images/buy-sell-bg.png') 60% 50% no-repeat;
+    background: url('../images/buy-sell-bg.png') no-repeat;
     height: 500px;
-    
+    background-size: 100% 100%;
 }
 
 .third-column{
